Fix missing left-alignment

--- a/synaptech-page/src/styles/Styles.css
+++ b/synaptech-page/src/styles/Styles.css
@@ -249,6 +249,7 @@ a:active { text-decoration: none; }
   width: 100%;
   display: flex; 
   flex-direction: row;
+  text-align:left;
 }
 
 .Body-rows {
@@ -259,6 +260,7 @@ a:active { text-decoration: none; }
   width: 100%;
   display: flex; 
   flex-direction: column;
+  text-align:left;
 }
 
 
@@ -266,6 +268,7 @@ a:active { text-decoration: none; }
   text-align: left;
 
 }
+
 .test{
   color:white;
   min-height: 50vh;
